Fix z-index of intercom launcher in combination with the privacy notificiation bar (#1416)

--- a/source/stylesheets/components/_privacy-notification.scss
+++ b/source/stylesheets/components/_privacy-notification.scss
@@ -1,14 +1,16 @@
 .privacy-notification-container {
   bottom: 0;
   display: none;
-  left: 0;
   position: fixed;
-  right: 0;
   text-align: center;
-  z-index: 2147483648;
+  width: 100%;
+  z-index: 2;
 
   @include media($medium-up) {
     bottom: 1em;
+    left: 50%;
+    transform: translateX(-50%);
+    width: auto;
   }
 
   a {
